# prysm

beacon-chain/blockchain/: BUILD.bazel  service.go
beacon-chain/core/helpers/: committee.go  randao.go
beacon-chain/powchain/: service.go
beacon-chain/rpc/: attester_server.go  beacon_server.go  service.go  service_test.go  validator_server.go
contracts/deposit-contract/deployContract/: deployContract.go
contracts/deposit-contract/sendDepositTx/: README.md
docs/: SHARDING.md
scripts/: run-8-validators.sh  setup-8-validators.sh
shared/params/: config.go
shared/slotutil/: BUILD.bazel  slotticker.go
tools/assignment-watcher/: BUILD.bazel  main.go
validator/client/: BUILD.bazel  fake_validator_test.go  runner.go  service.go  validator.go  validator_attest.go  validator_test.go
